[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcp_client"
path = "bin/tcp_client.rs"

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.57"
derive_builder = "0.11.2"
futures-util = "0.3.21"
log = "0.4.17"
simple_logger = "2.2.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
